add: basic precache logic with workbox

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/app.bundle.css">
 </head>
 <body>
-  test hello!!!!!
+  test hello!
+  <img src="./assets/images/google.png" alt="google" width="200" height="auto">
 </body>
 </html>
